@@ -138,6 +138,11 @@ abstract class CmsAdminThemeBase
 	 */
 	private $_subtitle;
 
+    /**
+     * @ignore
+     */
+    private $_headtext;
+
 	/**
 	 * @ignore
 	 */
@@ -849,10 +854,9 @@ abstract class CmsAdminThemeBase
 	 * @since 1.11
 	 * @param string $parent Indicates the parent to start at.  use a value of -1 to indicate the top node.
 	 * @param int $maxdepth The maximum depth of the tree.  -1 indicates no maximum depth
-	 * @param bool $usecache Indicates wether the cache should be used.  This should be FALSE when not retrieving the whole tree.
 	 * @return array A nested array of menu nodes.  The children member represents the nesting.
 	 */
-	public function get_navigation_tree($parent = -1,$maxdepth = -1,$usecache = TRUE)
+	public function get_navigation_tree($parent = -1,$maxdepth = -1)
 	{
 		$nodes = $this->_get_navigation_tree_sub($parent,$maxdepth);
 		return $nodes;
@@ -1141,7 +1145,7 @@ abstract class CmsAdminThemeBase
 	 * @param string $name optional theme name.
 	 * @return CmsAdminThemeBase Reference to the initialized admin theme.
 	 */
-	static public function &GetThemeObject($name = '')
+	static public function GetThemeObject($name = '')
 	{
 		if( is_object(self::$_instance) ) return self::$_instance;
 
@@ -1315,6 +1319,62 @@ abstract class CmsAdminThemeBase
 		return 'index.php'.$urlext;
 	}
 
+    /**
+     * Add text to the head section of the output
+     *
+     * The CMSMS core code calls this method to add text and javascript to output in the head section required for various functionality.
+     *
+     * @param string $txt The text to add to the head section.
+     * @since 2.2
+     * @author Robert Campbell
+     */
+    public function add_headtext($txt)
+    {
+        $txt = trim($txt);
+        if( $txt ) $this->_headtext .= "\n".$txt;
+    }
+
+    /**
+     * Get text that needs to be injected into the head section of the output.
+     *
+     * This method is typically called by the admin theme itself to get the text to render.
+     *
+     * @return string
+     * @since 2.2
+     * @author Robert Campbell
+     */
+    public function get_headtext()
+    {
+        return $this->_headtext;
+    }
+
+    /**
+     * Add text to the footer of the output, immediately before the </body> tag.
+     *
+     * @param string $txt The text to add to the end of the output.
+     * @since 2.2
+     * @author Robert Campbell
+     */
+    public function add_footertext($txt)
+    {
+        $txt = trim($txt);
+        if( $txt ) $this->_footertext .= "\n".$txt;
+    }
+
+    /**
+     * Get text that needs to be injected into the footer section of the output.
+     *
+     * This method is typically called by the admin theme itself to get the text to render.
+     *
+     * @return string
+     * @since 2.2
+     * @author Robert Campbell
+     */
+    public function get_footertext()
+    {
+        return $this->_footertext;
+    }
+
 	/**
 	 * An abstract function to output the header html
 	 * This function may not display anything, but may store data for use in the postprocess mechanism
@@ -1322,6 +1382,7 @@ abstract class CmsAdminThemeBase
 	 * and all admin navigation etc.  Many admin themes may not do anything here.
 	 *
 	 * @return string html contents.
+     * @deprecated
 	 */
 	abstract public function do_header();
 
